fixed too small submenu text in admin menu

--- a/campsite/src/javascript/JSCookMenu/ThemeOffice/theme.css
+++ b/campsite/src/javascript/JSCookMenu/ThemeOffice/theme.css
@@ -12,7 +12,7 @@
 .ThemeOfficeSubMenuTable
 {
 	font-family: verdana, arial, sans-serif;
-	font-size: 10px;
+	font-size: 12px;
 	padding: 0;
 	white-space: nowrap;
 	cursor: default;
